--- a/class-06-dom-objects-domain_modeling/demo-objects-dom/index.html
+++ b/class-06-dom-objects-domain_modeling/demo-objects-dom/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Objects and the DOM</title>
+  <link href="https://fonts.googleapis.com/css?family=Srisakdi" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
 <body>
