--- a/class-07-oop-constructors-tables/constructor-function-demo/index.html
+++ b/class-07-oop-constructors-tables/constructor-function-demo/index.html
@@ -4,7 +4,7 @@
     <title>Constructor Functions</title>
 </head>
 <body>
-    <h1>This is a live-server test</h1>
+    <h1>Constructor Functions!!!</h1>
     <script src="app.js"></script>
 </body>
 </html>
