End of class 10/23

--- a/class-12-canvas-chartjs/build-of-lab-11/index.html
+++ b/class-12-canvas-chartjs/build-of-lab-11/index.html
@@ -13,9 +13,9 @@
   <p>Instructions....</p>
 
   <section id="image_container">
-    <img id="left" src="">
-    <img id="center" src="">
-    <img id="right" src="">
+    <img id="left" src="" alt="" title="">
+    <img id="center" src="" alt="" title="">
+    <img id="right" src="" alt="" title="">
   </section>
 
   <ul id="productlist"></ul>
